# PluginFactory

./: CMakeLists.txt  README.md  TODO.md  build.sh
PluginFactory/: CMakeLists.txt  Exceptions.hpp  MakeCreatePluginMethod.hpp  MakePluginMethods.hpp  PluginDeleter.hpp  PluginFactory.hpp  PolicyProperties.hpp
PluginFactory/details/: NullDeleter.hpp  NullPluginService.hpp  PluginCreatorHandle.hpp  PluginExtensionHelper.hpp  PluginHandle.hpp  PluginHandleImpl.hpp  PluginLoader.hpp  PluginLoaderImpl.hpp  PolicyHolder.hpp  PolicyProperties.hpp  build_traits.hpp
PluginFactory/platform/posix/: LibraryHandle.hpp  OpenLibrary.cpp  OpenLibrary.hpp  (+4 more)
PluginFactory/src/: Dummy.cpp  Exceptions.cpp  PluginFactory.cpp
PluginFactory/tests/acceptance_test/load_plugins/: CMakeLists.txt
PluginFactory/tests/acceptance_test/load_plugins/load_plugins/: PluginInterface.hpp  PluginServiceInterface.hpp
PluginFactory/tests/acceptance_test/load_plugins/load_plugins/bar/: plugin_bar.cpp
PluginFactory/tests/acceptance_test/load_plugins/load_plugins/foo/: plugin_foo.cpp
PluginFactory/tests/acceptance_test/load_plugins/load_plugins/src/: ConcreteService.hpp  main.cpp
_cmake/: FindBuildTraits.cmake  FindUnitTest++.cmake  Finddl.cmake  config.cmake  dependencies.cmake
_cmake/AddLibrary/: AddSource.cmake  Dependencies.cmake  DeterminePlatform.cmake  DeterminePlatformFamily.cmake  LibraryFunction.cmake  RemoveIgnoredPaths.cmake  RemoveIgnoredPathsContained.cmake  RemoveIgnoredPathsRegex.cmake
_cmake/dependencies/: Boost.cmake  BuildTraits.cmake  dl.cmake
_notes/: PluginFactory.md
(+13 files in other folders)
